# brics-protocol

./: .env.example  .gitignore  .pnp.cjs  .slither.json  .solcover.js  AUDIT_SCOPE.md  CHANGELOG.md  CI_FINAL_IMPLEMENTATION.md  CI_FINAL_IMPROVEMENTS.md  CI_FIXES_SUMMARY.md  CI_IMPROVEMENTS_SUMMARY.md  CODEOWNERS  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Makefile  PR_BODY.md  README.md  RELEASE_NOTES.md  RUNBOOK.md  SECURITY.md  TODO-v0.2.1.md  build-issue61-bundle.sh  ci_nav_bundle.mjs  coverage-bump-plan.md  coverage.json  deployments-hardhat.json  deployments-mainnetFork.json  dev.md  env.ci.example  env.example  eslint.config.js  extract-highs.js  gas-report.txt  hardhat.config.ts  package-issue61-minimal.js  package-issue61-safe.js  package-issue61-simple.js  package-lock.json  package.json  patch_checkout.py  (+5 more)
.devstack/: addresses.json
.github/: CODEOWNERS  pull_request_template.md
.husky/: pre-commit
.tmp_mz/: hardhat.config.ts  package.json
audit/: audit-triage.md  fork-rehearsal.json  fork-rehearsal.md  role-permission-matrix.md  roles-audit.json  slither-allowlist.json  slither-highs.json  slither-highs.md  slither-report-final.md  slither-report-fixed-detailed.md
contracts/: BRICSToken.sol  (+21 more)
risk_api/: Dockerfile  Makefile  __init__.py  app.py  deps.py  env.example  models.py  pyproject.toml  signing.py  verify_signature.py
risk_api/providers/: __init__.py  emergency.py  issuance.py  nav.py  risk.py  safety.py
risk_api/tests/: __init__.py  conftest.py  test_emergency.py  test_health.py  test_issuance.py  test_nav.py  test_risk.py  test_safety.py
(+411 files in other folders)
